version 0.41
	* Threads/memory pools/notifications fixes

version 0.40 (2010/03/05)
	* Display tooltips over appointments if the user want them
	* Use libuuid to generate unique event ids if available
	* Fix ticket #13 : iCalendar stores can use local files
	* The appointment editor becomes non modal
	* The task editor becomes non modal
	* Internationalization infrastructure and beginning of a french
	  translation
	* Set application title from the selected date and tab
	* Show today's date in the appicon
	* Use a human readable description for colors in defaults
	* Show time in the appicon
	* Add a new UI Preferences panel and use it for tooltips and 
	  date and time in the appicon
	* Full keyboard navigation in appointment and task dialogs
 	  (you can use the Tab key in the description fields, yeah !)
	* Better navigation performances with lots of appointments
	* Bug fixes thanks to Fred Kiefer, James Jordan, Sergey Golovin 
	  and Sebastian Reitenbach

version 0.39 (2009/09/20)
	* Code cleanups (as always)
	* Fix empty Task tab on startup bug
	* Add configure step to locate libical header and clean
	  the makefile while we're at it
	* Allow event selection and edition in the week view
	* Fix ticket #10 (appointment going past midnight not
	  shown in the second day view)
	* Add a slider in the appointment editor to modify the start time
	* Use a bigger step in the appointment editor sliders
	  when holding the alt key
	* Various bug fixes

version 0.38 (2009/03/18)
	* Fix tickets #6 and #7
	* Add a preliminary week view
	* Use a SelectionManager instead of various workarounds
	* Various code cleanups
	* Asynchronous load for distant stores on startup (try #3)
	* Add a tests/ folder with what should become a test suite
	* Automatic refresh and refresh interval in the preferences
	  panel, enabled only for the backends that support it
	* Fix ticket #8
	* Use libical recurrence handling and remove our old junk